Got pixel readers/writers working with AWT.